# serializer version: 1
# name: test_cancel
  dict({
    'args': dict({
    }),
    'claim': None,
    'claimed_at': None,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 1,
    'pinged_at': None,
    'progress': 100,
    'state': <JobState.CANCELLED: 'cancelled'>,
    'steps': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': <Workflow.BUILD_INDEX: 'build_index'>,
  })
# ---
# name: test_cancel.1
  dict({
    '_id': 'foo',
    'archived': False,
    'args': dict({
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'rights': dict({
    }),
    'state': 'cancelled',
    'status': list([
      dict({
        'error': None,
        'progress': 0.33,
        'stage': 'foo',
        'state': 'running',
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
      dict({
        'error': None,
        'progress': 0.33,
        'stage': 'foo',
        'state': 'cancelled',
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflow': 'build_index',
  })
# ---
# name: test_create
  dict({
    'args': dict({
      'index_id': 'foo',
    }),
    'claim': None,
    'claimed_at': None,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 1,
    'pinged_at': None,
    'progress': 0,
    'state': <JobState.PENDING: 'pending'>,
    'steps': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': <Workflow.BUILD_INDEX: 'build_index'>,
  })
# ---
# name: test_create[None]
  dict({
    'args': dict({
      'sample_id': 'foo',
    }),
    'claim': None,
    'claimed_at': None,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 'random8c',
    'pinged_at': None,
    'progress': 0,
    'state': <JobState.PENDING: 'pending'>,
    'steps': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': <Workflow.CREATE_SAMPLE: 'create_sample'>,
  })
# ---
# name: test_create[None].1
  dict({
    '_id': 'bf1b993c',
    'acquired': False,
    'args': dict({
      'sample_id': 'foo',
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'key': None,
    'ping': None,
    'rights': dict({
    }),
    'space': dict({
      'id': 0,
    }),
    'state': 'waiting',
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflow': 'create_sample',
  })
# ---
# name: test_create[bar]
  dict({
    'args': dict({
      'sample_id': 'foo',
    }),
    'claim': None,
    'claimed_at': None,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 'bar',
    'pinged_at': None,
    'progress': 0,
    'state': <JobState.PENDING: 'pending'>,
    'steps': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': <Workflow.CREATE_SAMPLE: 'create_sample'>,
  })
# ---
# name: test_create[bar].1
  dict({
    '_id': 'bar',
    'acquired': False,
    'args': dict({
      'sample_id': 'foo',
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'key': None,
    'ping': None,
    'rights': dict({
    }),
    'space': dict({
      'id': 0,
    }),
    'state': 'waiting',
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflow': 'create_sample',
  })
# ---
